...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectFragment">

    <Button
        android:id="@+id/button_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Name" />


    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/name_input"
        app:layout_constraintBottom_toTopOf="@id/Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButton" />

    <TextView
        android:id="@+id/textView_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
...
        app:layout_constraintBottom_toTopOf="@id/yellow_frog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/blue_frog"
        android:layout_width="@dimen/image_button"
        android:layout_height="@dimen/image_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"

        android:scaleType="fitXY"
...
        android:scaleType="fitXY"
        android:src="@drawable/yellow_up"
        app:layout_constraintBottom_toTopOf="@id/textView_difficulty"
        app:layout_constraintEnd_toStartOf="@id/green_frog"
        app:layout_constraintStart_toEndOf="@id/blue_frog"
        app:layout_constraintTop_toBottomOf="@id/textView_character"
        android:contentDescription="TODO"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/green_frog"
        android:layout_width="@dimen/image_button"
        android:layout_height="@dimen/image_button"
...
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/textView_difficulty"
        tools:ignore="MissingConstraints">


        <RadioButton
            android:id="@+id/button_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/button_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/button_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="HARD" />
    </RadioGroup>
    />



</androidx.constraintlayout.widget.ConstraintLayout>
