...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/safe_point"
        app:layout_constraintVertical_bias="0.5" />


    <ImageView
        android:id="@+id/up_arrow"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:alpha="0.3"
        android:elevation="1000dp"
        android:src="@drawable/up_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
...
